[tool.poetry]
name = "flare_portal"
version = "0.1.0"
description = ""
authors = ["Torchbox <hello@torchbox.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "~3.2"
psycopg2 = "~2.8"
gunicorn = {version = "~20.0", optional = true}
whitenoise = "~5.2"
dj-database-url = "~0.5"
django-redis = "~4.12"
django-storages = { version ="~1.11", extras = ["boto3"] }
django-referrer-policy = "~1.0"
django-csp = "~3.7"
scout-apm = "~2.18"
django-basic-auth-ip-whitelist = "~0.3.3"
sentry-sdk = "^1.0.0"
django-widget-tweaks = "^1.4.8"
django-model-utils = "^4.1.1"
djangorestframework = "^3.12.2"
django-extra-views = "^0.13.0"
django-solo = "^1.1.5"
Pillow = "^8.1.1"
Markdown = "3.1.1"
Faker = "^8.7.0"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
Werkzeug = "~1.0"
django-extensions = "~3.1"
fabric = "~2.6"
stellar = "~0.4"
SQLAlchemy = "1.2.5"
SQLAlchemy-Utils = "0.33.1"
factory-boy = "^3.2.0"

# Linters etc.
black = "20.8b1"
detect-secrets = "~1.1"
flake8 = "3.8.4"
isort = "5.7.0"
pre-commit = "~2.12"
seed-isort-config = "1.9.4"

# Documentation
mkdocs = "~1.0"
mkdocs-material = "~4.6"
pymdown-extensions = "~6.2"
mypy = "^0.812"
django-stubs = "^1.7.0"
ipdb = "^0.13.7"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''
